--- a/Rocketseat project/style.css
+++ b/Rocketseat project/style.css
@@ -157,3 +157,13 @@ footer a{
     text-decoration: underline;
     font-size: 14px; 
 }
+
+@media (min-width: 700px) {
+    :root{
+        --bg-url: url(assets/bg-desktop.jpg);
+    }
+
+    .light {
+        --bg-url: url(assets/bg-desktop-light.jpg)
+    }
+}
