--- a/Rocketseat project/style.css
+++ b/Rocketseat project/style.css
@@ -75,6 +75,8 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-out 0.4s;
 }
 
 #switch span{
@@ -89,11 +91,17 @@ body * {
 }
 
 .light #switch button{
-    right: 0;
-    left: initial;
+    animation: slide-in 0.4s forwards;
 }
 
+#switch button:hover{
+    outline: 8px solid var(--highlight-color);
+    cursor: pointer;
+}
 
+#switch span:hover{
+    cursor: pointer;
+}
 
 ul {
     list-style: none;
@@ -166,5 +174,23 @@ footer a{
 
     .light {
         --bg-url: url(assets/bg-desktop-light.jpg)
+    }
+}
+
+@keyframes slide-in{
+    from{
+        left: 0;
+    }
+    to{
+        left: 50%;
+    }
+}
+
+@keyframes slide-out{
+    from{
+        left: 50%;
+    }
+    to{
+        left: 0;
     }
 }
